--- a/android/app/src/main/res/layout/layout.xml
+++ b/android/app/src/main/res/layout/layout.xml
@@ -82,7 +82,7 @@
                         android:layout_marginEnd="8dp"
                         android:scrollbars="none"
                         android:text="___FIELD_LABEL___"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                         android:textColor="?colorPrimary"
                         app:layout_constraintBottom_toTopOf="@+id/___VALUE_ID___"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -120,7 +120,7 @@
                         android:text="___TEXT___"
                         android:textAlignment="textStart"
                         android:textAllCaps="false"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                         android:textColor="?colorOnSurface"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
